<?xml version="1.0"?>
<package format="3">
  <name>xarm_teleop</name>
  <version>0.0.1</version>
  <description>Keyboard EE teleop for IK - JointState for XArm7 in Isaac Sim</description>
  <maintainer email="revanths@andrew.cmu.edu">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- python deps -->
  <exec_depend>pyyaml</exec_depend>
  <exec_depend>pinocchio</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>pytransform3d</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
